--- a/BnB/web_static/0-index.html
+++ b/BnB/web_static/0-index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AIRBNB clone</title>
   </head>
+  <header style="background-color: #FF0000; height: 70px; height: 100%">
+  </header>
   <body>
 	<script src="index.js"></script>
   </body>
