--- a/BnB/web_static/0-index.html
+++ b/BnB/web_static/0-index.html
@@ -4,30 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AIRBNB clone</title>
-    <style>
-    header{
-    background-color:#FF0000;
-    height: 70px;
-    width: 100%;
-    }
-    footer {
-    position: fixed;
-    bottom: 0;
-  	text-align: center;
-    line-height: 30px;
-  	background-color: #00FF00;
-  	color: white;
-    height: 60px;
-    width: 100%;
-    }
-    </style>
   </head>
-  <header>
+  <header style="background-color: #FF0000; height: 70px; width: 100%">
   </header>
-  <body>
+  <body style="margin: 0; padding: 0px">
 	<script src="index.js"></script>
   </body>
-  <footer>
+  <footer style="position: fixed; bottom: 0; text-align: center; line-height: 30px; background-color: #00FF00; color: white; height: 60px; width: 100%">
     <p>Best School</p>
   </footer>
 </html>
