--- a/BnB/web_static/1-index.html
+++ b/BnB/web_static/1-index.html
@@ -6,19 +6,23 @@
     <title>AIRBNB clone</title>
     <style>
     header{
-    background-color:#FF0000;
-    height: 70px;
-    width: 100%;
+      background-color:#FF0000;
+      height: 70px;
+      width: 100%;
     }
     footer {
-    position: fixed;
-    bottom: 0;
-  	text-align: center;
-    line-height: 30px;
-  	background-color: #00FF00;
-  	color: white;
-    height: 60px;
-    width: 100%;
+      position: fixed;
+      bottom: 0;
+      text-align: center;
+      line-height: 30px;
+      background-color: #00FF00;
+      color: white;
+      height: 60px;
+      width: 100%;
+    }
+    body {
+      margin: 0;
+      padding: 0px;
     }
     </style>
   </head>
