--- a/BnB/web_static/2-index.html
+++ b/BnB/web_static/2-index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AIRBNB clone</title>
   </head>
-  <header style="background-color: #FF0000; height: 70px; width: 100%;">
+  <header style="background-color: #FF0000; height: 70px; width: 100%">
   </header>
-  <body style="margin: 0; padding: 0px;">
+  <body style="margin: 0; padding: 0px">
 	<script src="index.js"></script>
   </body>
-  <footer style="position: fixed; bottom: 0; text-align: center; line-height: 30px; background-color: #00FF00; color: white; height: 60px; width: 100%;">
+  <footer style="position: fixed; bottom: 0; text-align: center; line-height: 30px; background-color: #00FF00; color: white; height: 60px; width: 100%">
     <p>Best School</p>
   </footer>
 </html>
