--- a/BnB/web_static/2-index.html
+++ b/BnB/web_static/2-index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AIRBNB clone</title>
+    <title>AirBnB Clone</title>
+    <link rel="stylesheet" href="styles/2-common.css">
+    <link rel="stylesheet" href="styles/2-header.css">
+    <link rel="stylesheet" href="styles/2-footer.css">
   </head>
   <header style="background-color: #FF0000; height: 70px; width: 100%">
   </header>
