--- a/BnB/web_static/index.html
+++ b/BnB/web_static/index.html
@@ -15,7 +15,7 @@
     </header>
     <div class="container">
       <section class="filters">
-	<button>Search</button>
+	<button type="button">Search</button>
       </section>
     </div>
     <footer>
