--- a/BnB/web_static/index.html
+++ b/BnB/web_static/index.html
@@ -8,14 +8,22 @@
     <link rel="stylesheet" href="styles/4-common.css" />
     <link rel="stylesheet" href="styles/3-header.css" />
     <link rel="stylesheet" href="styles/3-footer.css" />
-    <link rel="stylesheet" href="styles/4-filters.css" />
+    <link rel="stylesheet" href="styles/5-filters.css" />
   </head>
   <body>
     <header>
     </header>
     <div class="container">
       <section class="filters">
-	<button type="button">Search</button>
+        <div class="locations">
+          <h3>States</h3>
+          <h4>California, New York</h4>
+        </div>
+        <div class="amenities">
+          <h3>Amenities</h3>
+          <h4>Internet, Kitchen</h4>
+        </div>
+	    <button type="button">Search</button>
       </section>
     </div>
     <footer>
