--- a/BnB/web_static/0-index.html
+++ b/BnB/web_static/0-index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirBnB Clone</title>
-  </head>
-  <body style="margin: 0; padding: 0px;">
-    <header style="background-color: #FF0000; height: 70px; width: 100%;">
-    </header>
-    <footer style="position: fixed; bottom: 0; text-align: center; line-height: 30px; background-color: #00FF00; color: white; height: 60px; width: 100%;">
-        <p>Best School</p>
-    </footer>
-  </body>
+	<head>
+		<title>AirBnB clone</title>
+	</head>
+    <body style="margin:0px;padding:0px;">
+		<header style="background-color:#FF0000;height:70px;width:100%;">
+		</header>
+
+		<footer style="position:fixed;bottom:0;background-color:#00FF00;height:60px;width:100%;text-align:center;line-height:30px;">
+			<p>Holberton School</p>
+		</footer>
+	</body>
 </html>
