--- a/BnB/web_static/2-index.html
+++ b/BnB/web_static/2-index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirBnB Clone</title>
-    <link rel="stylesheet" href="styles/2-common.css">
-    <link rel="stylesheet" href="styles/2-header.css">
-    <link rel="stylesheet" href="styles/2-footer.css">
-  </head>
-  <header style="background-color: #FF0000; height: 70px; width: 100%">
-  </header>
-  <body style="margin: 0; padding: 0px">
-	<script src="index.js"></script>
-  </body>
-  <footer style="position: fixed; bottom: 0; text-align: center; line-height: 30px; background-color: #00FF00; color: white; height: 60px; width: 100%">
-    <p>Best School</p>
-  </footer>
+	<head>
+		<title>AirBnB clone</title>
+
+		<link rel="stylesheet" href="styles/2-common.css"/>
+		<link rel="stylesheet" href="styles/2-header.css"/>
+		<link rel="stylesheet" href="styles/2-footer.css"/>
+	</head>
+    <body>
+		<header>
+		</header>
+
+		<footer>
+			<p>Holberton School</p>
+		</footer>
+	</body>
 </html>
